--- a/openscc/mimir/templates/mimir/dashboardProfessor.html
+++ b/openscc/mimir/templates/mimir/dashboardProfessor.html
@@ -58,6 +58,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4 mb-2">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Feedbacks</h5>
+                    <p class="card-text">Verificar os feedbacks</p>
+                    <a href="{% url 'mimir:meusFeedbacks' %}" class="btn btn-primary">Gerenciar feedbacks</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
