--- a/openscc/submission/templates/submissao/profile.html
+++ b/openscc/submission/templates/submissao/profile.html
@@ -572,7 +572,7 @@
                 <i class="fas fa-calendar-times"></i>
                 <h3>Nenhuma atividade encontrada</h3>
                 <p>Você não está inscrito em nenhuma atividade no momento.</p>
-                <a href="{% url 'submission:conferencias' %}" class="btn-primary" style="margin-top: 1rem;">
+                <a href="{% url 'submission:confList' %}" class="btn-primary" style="margin-top: 1rem;">
                     <i class="fas fa-search"></i>
                     Explorar Conferências
                 </a>
