--- a/openscc/mimir/templates/mimir/temaList.html
+++ b/openscc/mimir/templates/mimir/temaList.html
@@ -1,7 +1,7 @@
 {% extends "mimirBase.html" %}
 
 {% block mainContent %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Cabeçalho -->
     <div class="d-flex justify-content-between align-items-center mb-4">
         <div>
